--- a/creacion_cuenta.html
+++ b/creacion_cuenta.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="switch.js"></script>
+    <script src="creacion_cuenta.js"></script>
 </body>
 </html>
