--- a/division.html
+++ b/division.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="switch.js"></script>
+    <script src="division.js"></script>
 </body>
 </html>
